# harness-based-NLP

./: .gitignore  CLAUDE.md  PLAN.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: documenter.md  evaluator-llm.md  generator.md  orchestrator.md  plan-validator.md  planner.md  review-synthesis.md  reviewer-bug.md  reviewer-ml.md  reviewer-test.md  slop-cleaner.md
.harness/: claude-progress.txt  evaluator.py  evaluator_llm.py  orchestrator.py  progress_sync.py  runner.py  sprint-contract.yaml
.harness/hooks/: auto_commit.py  preflight_check.py
.harness/sprints/sprint-01/: evaluation-report.md.template  evaluation-request.md  evaluation-request.md.template  review-report.md
.harness/sprints/sprint-02/: evaluation-report.md  evaluation-request.md
.harness/sprints/sprint-03/: evaluation-request.md
artifacts/: baseline_metrics.json  sprint-02_metrics.json
docs/: harness-spec.md  sprint-01.md  sprint-02.md  sprint-03.md  tech_stack.md  uv_vs_pip.md
notebooks/: 01_eda.ipynb
scripts/: download_data.sh
src/: baseline.py  data_loader.py  preprocess.py
tests/: test_baseline.py  test_data_loader.py  test_preprocess.py
